--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,12 +79,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: NotoSansSC
+       fonts:
+         - asset: resource/fonts/KFOmCnqEu92Fr1Me5WZLCzYlKw.ttf
+         - asset: resource/fonts/bMrnmSyK7YY-MEu6aWjPDs-ar6uWaGWuob-r0jwvS-FGJCMY.ttf
+         - asset: resource/fonts/k3kXo84MPvpLmixcA63oeALhL4iJ-Q7m8w.otf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
